--- a/style.css
+++ b/style.css
@@ -106,6 +106,12 @@
     bottom: 25px;
 
 }
+.fourth{
+    position: relative;
+    top: 20px;
+    
+
+}
 .prag{
     background-color:rgb(175, 232, 213) ;
     width: 100%;
@@ -124,7 +130,7 @@
     justify-content: space-around;
     text-align: center;
 }
-.boxs1,.boxs2,.boxs3,.boxs4{ 
+.boxs1,.boxs2,.boxs3,.boxs4{
     text-align: center;
 }
 .girlbox{
@@ -186,12 +192,16 @@
     padding: 5px;
     background-color: rgb(175, 232, 213) ;
     bottom: 0px;
-    width: 100%;
+    width: 1000%;
 }
 
 .gimg img {
-    width: 10rem;
-    height: 10rem;
+    width: 12rem;
+    height: 12rem;
     object-fit: cover;
     margin-top: 3rem;
+}
+img:hover{
+    transform: scale(1.05);
+
 }
